samples/_failures_safe/1761394718_cf19b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3cdc9dc.c: In function ‘main’:
./samples/SAFE/__tmp_d3cdc9dc.c:145:5: error: expected expression at end of input
  145 |     size_t compressed_size = compress_data(&params, input_data, input_len, output_data,
      |     ^~~~~~
./samples/SAFE/__tmp_d3cdc9dc.c:145:5: error: expected declaration or statement at end of input
